--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-GOOGLE_CLIENT_ID=766098178401-cob20bbkib8k7j5fketm1034kcl6pgl2.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
 MONGODB_URI="mongodb+srv://BBadmin:6AMadmin@cluster0.vmpfv4s.mongodb.net/skilllab "
 PORT= 3000
